<resources>
    <string name="app_name">MCQ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spaces">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="language_selected_button">Apply</string>
    <string name="Al">Advanced Level Exam</string>
    <string name="oL">Ordinary Level Exam</string>
    <string name="Grade_5">Grade 5 Scholarship Exam</string>
    <string name="ExamType">Choose the subject and year you want</string>
    <string name="Path">Path</string>
    <string name="Subject">Subject</string>
    <string name="Year">Year</string>
    <string name="GIT">General Information Technology</string>
    <string name="common_test">General Test</string>
    <string name="chosen_subject">Is the subject you have chosen</string>
    <string name="chosen_year">This is the year you choose</string>
    <string name="exam_des">When you are ready to do the question paper, click on the Next button</string>
    <string name="next_step">Go</string>
    <string name="back_step">Back</string>
    <string name="exit">Exit</string>
    <string name="warrning_examActivity1">You have More </string>
    <string name="warrning_examActivity2"> questions.Do you want to do that?? </string>
    <string name="warrning_examActivity3"> Do you do not want to do that?? </string>
    <string name="dialog_box_positive_button">Yes</string>
    <string name="dialog_box_negative_button">No</string>
    <string-array name="Path_array">
        <item>Math &amp; Bio</item>
        <item>Language</item>
        <item>Art</item>
        <item>Commerce</item>
        <item>Technology</item>
    </string-array>
    <string-array name="Math_subject">
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>ITC</item>
        <item>Agriculture</item>
    </string-array>
    <string-array name="Art_subject">
        <item>සිංහල</item>
        <item>බෞද්ධ ශිෂ්ටාචාරය</item>
        <item>හින්දු ශිෂ්ටාචාරය</item>
        <item>ක්‍රිස්තියානි ශිෂ්ටාචාරය</item>
        <item>යුරෝපා ඉතිහාසය</item>
        <item>ඉන්දියා ඉතිහාසය</item>
        <item>තර්ක ශාස්ත්‍රය</item>
        <item>භූගෝල විද්‍යාව</item>
        <item>දේශපාලන විද්යාව</item>
        <item>ගෘහ ආර්ථික විද්‍යාව</item>

    </string-array>
    <string-array name="Language_subject">
        <item>Bio</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>ITC</item>
        <item>Agriculture</item>
    </string-array>
    <string-array name="Commerce_subject">
        <item>Bio</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>ITC</item>
        <item>Agriculture</item>
    </string-array>

    <string-array name="year">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>
    <string-array name="english_medium">
        <item>Biology</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Agriculture</item>
        <item>Accountancy</item>
        <item>Business Studies</item>
        <item>Economics</item>
        <item>Basics in Political Science</item>
        <item>Geography</item>

    </string-array>
</resources>