<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroductionActivity"
    android:orientation="vertical"
    android:background="@color/purple_700"
    android:gravity="center">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_border"
        >
        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chosen_subject"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/chosen_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            android:textColor="#E6DCDC"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chosen_year"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/chosen_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#E6DCDC"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/exam_des"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:text="@string/next_step"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        android:backgroundTint="#FF9800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/back"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:text="@string/back_step"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        android:backgroundTint="#FF9800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>