<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_book"
    tools:context=".SelectPaperActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_back_arrow" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:background="@drawable/white_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ExamType"
                android:textSize="22sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/path"
                    android:gravity="start"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/Path"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:padding="5dp"
                    android:popupBackground="#FF5722"
                    android:background="@drawable/spinner_border"
                    android:id="@+id/Path"
                    android:textAlignment="center"
                    android:scrollbars="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/subject"
                    android:gravity="start"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/Subject"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:padding="5dp"
                    android:popupBackground="#FF5722"
                    android:background="@drawable/spinner_border"
                    android:id="@+id/Subject"
                    android:textAlignment="center"
                    android:scrollbars="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/year"
                    android:gravity="start"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/Year"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:padding="5dp"
                    android:popupBackground="#FF5722"
                    android:background="@drawable/spinner_border"
                    android:id="@+id/Year"
                    android:textAlignment="center"
                    android:scrollbars="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_selected_button"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:backgroundTint="#FF5722"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>